force-app/main/default/objects/Contact/fields/Allocated_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Time_Slot__c</fullName>
    <label>Allocated Time Slot</label>
    <type>TextArea</type>
</CustomField>