force-app/main/default/objects/Contact/fields/B_city__c.field-meta.xml
<CustomField>
    <fullName>B_city__c</fullName>
    <label>B city</label>
    <length>222</length>
    <type>Text</type>
</CustomField>