force-app/main/default/objects/Contact/fields/Favourite_Food__c.field-meta.xml
<CustomField>
    <fullName>Favourite_Food__c</fullName>
    <label>Favourite Food</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Roll</fullName>
            </value>
            <value>
                <fullName>Biryani</fullName>
            </value>
            <value>
                <fullName>Burger</fullName>
            </value>
            <value>
                <fullName>Noodles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>