force-app/main/default/objects/Contact/fields/isEmailActive__c.field-meta.xml
<CustomField>
    <fullName>isEmailActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEmailActive</label>
    <type>Checkbox</type>
</CustomField>