force-app/main/default/objects/Contact/fields/isGenderActive__c.field-meta.xml
<CustomField>
    <fullName>isGenderActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isGenderActive</label>
    <type>Checkbox</type>
</CustomField>