force-app/main/default/objects/Contact/fields/isNameActive__c.field-meta.xml
<CustomField>
    <fullName>isNameActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isNameActive</label>
    <type>Checkbox</type>
</CustomField>