force-app/main/default/objects/Contact/fields/isPhoneActive__c.field-meta.xml
<CustomField>
    <fullName>isPhoneActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPhoneActive</label>
    <type>Checkbox</type>
</CustomField>