force-app/main/default/objects/Contact/fields/Number_Field_B__c.field-meta.xml
<CustomField>
    <fullName>Number_Field_B__c</fullName>
    <label>Number Field B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>