force-app/main/default/objects/Contact/fields/Preferred_contact_method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_contact_method__c</fullName>
    <description>to contact the existing customer</description>
    <label>Preferred contact method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work phone</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Home Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>