force-app/main/default/objects/Contact/fields/Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Time_Slot__c</fullName>
    <label>Time Slot</label>
    <length>20</length>
    <type>Text</type>
</CustomField>