force-app/main/default/objects/Contact/fields/Time_Slot_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Time_Slot_Allocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time Slot Allocated</label>
    <type>Checkbox</type>
</CustomField>