force-app/main/default/objects/Contact/validationRules/Allow_only_1_favourite_Food.validationRule-meta.xml
<ValidationRule>
    <fullName>Allow_only_1_favourite_Food</fullName>
    <active>true</active>
    <errorConditionFormula>PICKLISTCOUNT( Favourite_Food__c ) &gt;1</errorConditionFormula>
    <errorDisplayField>Favourite_Food__c</errorDisplayField>
    <errorMessage>Select only 1!!</errorMessage>
</ValidationRule>