force-app/main/default/objects/Contact/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  IF(ISBLANK(AccountId), FALSE, TRUE),
 MailingPostalCode  &lt;&gt;  Account.ShippingPostalCode
)</errorConditionFormula>
    <errorDisplayField>MailingPostalCode</errorDisplayField>
    <errorMessage>Account Zip Code should be same as Contact Zip Code.</errorMessage>
</ValidationRule>